--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,16 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ffef74;
   }
   button {
     background-color: #f9f9f9;
   }
+  .signUpInput{
+    height: 35px;
+    padding: 0px;
+    margin-right: 5px;
+  }
+
+
 }
